feat: добавить поддержку аватара пользователя в компонент SpotifyAuthManager
